2013-03-12 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Set CC to gcc for MSYS target. Otherwise
	  /mingw/bin/cc is used.

2013-01-27 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile:
	  - CC and CPP can be overridden by environment.
	  - CFLAGS optimization flags can be overridden by environment.
	  - Separate LIBS from LDFLAGS.
	  Thanks to Justin Lecher <jlec@gentoo.org>

2013-01-25 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 6.0.3

2013-01-18 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c/unix2dos.c: Print system error when writing to
	  temporary output file fails.

2013-01-16 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c/unix2dos.c: Print system error when closing of
	  temporary output file fails. E.g. "No space left on device".

2012-12-25 Erwin Waterlander <waterlan@xs4all.nl>
	* querycp.c/h: Added public domain phrase for Debian
	  license check.

2012-12-12 Erwin Waterlander <waterlan@xs4all.nl>
	* test: New directory with some test files.

2012-09-20 Erwin Waterlander <waterlan@xs4all.nl>
	* man/man1/Makefile: Removed dependency on 'sed' program.

2012-09-19 Erwin Waterlander <waterlan@xs4all.nl>
	* vc.mak: Visual C++ version supports wildcard expansion.
	  Added targets 'install', 'uninstall', 'doc', 'dist',
	  'txt', 'html', and 'mostlyclean'.
	* INSTALL.txt: Update for Visual C++.

2012-09-16 Erwin Waterlander <waterlan@xs4all.nl>
	* *.c/*.h: Dos2unix compiles with Microsoft Visual C++.
	* vc.mak: New makefile for Microsoft Visual C++.
	* INSTALL.txt: Update for Visual C++.

2012-09-15 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Better check for DJGPP. DJGPP 2.04 uname returns "FreeDOS"
	  on Freedos, 2.03 uname returns always "MS-DOS". Thanks to Rugxulo.
	* man/man1/dos2unix.pod: Fixed a typo. Thanks to Jari Aalto.

2012-09-06 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 6.0.2

2012-08-29 Erwin Waterlander <waterlan@xs4all.nl>
	* wcc*: Fix target 'dist' in Watcom makefiles.