@@ -129,7 +129,7 @@ int ConvertUnixToDosW(FILE* ipInF, FILE* ipOutF, CFlag *ipFlag, char *progname)
             if (!ipFlag->Quiet)
             {
               fprintf(stderr, "%s: ", progname);
-              fprintf(stderr, _("Binary symbol found at line %d\n"), line_nr);
+              fprintf(stderr, _("Binary symbol 0x00%02X found at line %d\n"),TempChar, line_nr);
             }
             break;
           }
@@ -182,7 +182,7 @@ int ConvertUnixToDosW(FILE* ipInF, FILE* ipOutF, CFlag *ipFlag, char *progname)
             if (!ipFlag->Quiet)
             {
               fprintf(stderr, "%s: ", progname);
-              fprintf(stderr, _("Binary symbol found at line %d\n"), line_nr);
+              fprintf(stderr, _("Binary symbol 0x00%02X found at line %d\n"),TempChar, line_nr);
             }
             break;
           }
@@ -329,7 +329,7 @@ int ConvertUnixToDos(FILE* ipInF, FILE* ipOutF, CFlag *ipFlag, char *progname)
             if (!ipFlag->Quiet)
             {
               fprintf(stderr, "%s: ", progname);
-              fprintf(stderr, _("Binary symbol found at line %d\n"), line_nr);
+              fprintf(stderr, _("Binary symbol 0x%02X found at line %d\n"),TempChar, line_nr);
             }
             break;
           }
@@ -379,7 +379,7 @@ int ConvertUnixToDos(FILE* ipInF, FILE* ipOutF, CFlag *ipFlag, char *progname)
             if (!ipFlag->Quiet)
             {
               fprintf(stderr, "%s: ", progname);
-              fprintf(stderr, _("Binary symbol found at line %d\n"), line_nr);
+              fprintf(stderr, _("Binary symbol 0x%02X found at line %d\n"),TempChar, line_nr);
             }
             break;
           }
