@@ -1,4 +1,4 @@
 DOS2UNIX_VERSION = 6.0.4-beta1
 DOS2UNIX_VERSION_SHORT = 604b1
-DOS2UNIX_DATE = 2013-01-27
+DOS2UNIX_DATE = 2013-06-11
 DOS2UNIX_AUTHOR = 'Erwin Waterlander'
